refactor frontend and home page

--- a/app/views/pages/users.html
+++ b/app/views/pages/users.html
@@ -87,6 +87,9 @@
                     </article>
                 {% endfor %}
             </div>
+            <div class="more-artists">
+                <button class="button-solid js-moreButton" data-size='small' data-color='red'>Ver mas</button>
+            </div>
         </div>
         <div class="artists-container__right-filters js-rightFilters">
             <div class="filters">
@@ -103,10 +106,6 @@
                 <div class="filter js-time" data-value="year">Año</div>
             </div>
         </div>
-    </section>
-
-    <section class="more-artists">
-        <button class="button-solid js-moreButton" data-size='small' data-color='red'>Ver mas</button>
     </section>
 
     <script type="text/template" id="artist-template">
