--- a/public/stylus/discover-artists.styl
+++ b/public/stylus/discover-artists.styl
@@ -63,3 +63,8 @@
 	&__left-filters.visible
 	&__right-filters.visible
 		width auto
+
+.more-artists
+	max-width max-width
+	margin auto
+	text-align center
