--- a/public/stylus/elements/filters.styl
+++ b/public/stylus/elements/filters.styl
@@ -37,7 +37,7 @@
 	border solid 1px #ddd
 	font-family 'Raleway'
 	font-size .8rem
-	// min-width 9.25rem
+	min-width 9.25rem
 	overflow hidden
 	&__title
 		padding .5rem 1rem
