--- a/public/stylus/elements/forms.styl
+++ b/public/stylus/elements/forms.styl
@@ -1,12 +1,12 @@
-.login-form
-.register-form
-	// display flex
-	// margin .5rem 0
-	.facebook-button
-		margin 1rem 0 1.5rem 0
-	input
-	.separator-text
-		margin .5rem 0
+// .login-form
+// .register-form
+// 	// display flex
+// 	// margin .5rem 0
+// 	.facebook-button
+// 		margin 1rem 0 1.5rem 0
+// 	input
+// 	.separator-text
+// 		margin .5rem 0
 		
 		
 	// display flex
