--- a/public/stylus/elements/menus.styl
+++ b/public/stylus/elements/menus.styl
@@ -1,3 +1,8 @@
+
+/*------------------------------------------------------------------------------------------------------------*
+	$ DEPURADO---------------------------------------------------------------------------------------------------
+*------------------------------------------------------------------------------------------------------------*/
+
 /*------------------------------------*
 	$ SKINNY MENU
 *------------------------------------*/
@@ -10,6 +15,9 @@
 	 &__item
 		color #000
 		padding .5em 1rem
+		cursor pointer
+		&__icon
+			font-size .9rem
 		&.active
 			border-bottom .25em solid #000
 	
@@ -21,8 +29,10 @@
 	.skinny-menu[data-icon='true']
 		.skinny-menu__item__text
 			display inline
-
-
+		.skinny-menu__item__icon
+			display none
+			
+			
 /*------------------------------------*
 	$ THICK-MENU
 *------------------------------------*/
