--- a/public/stylus/elements/variables.styl
+++ b/public/stylus/elements/variables.styl
@@ -1,17 +1,22 @@
+// mobile-medium = 350px	// Mobile Medium
+// tablet = 500px				// Tablet
+// tablet-medium = 720px // Tablet Medium
+// desktop = 920px 			// Desktop
 
-// // Default						// Mobil small
-// break-point-1 = 350px	// Mobil
-// break-point-2 = 500px	// Tablet small
-// break-point-3 = 720px // Desktop small
-// break-point-4 = 920px // Desktop
+// max-width = 1100px 		// Large screens
 
+// // Style Guide
+// style-guide-background = #F5F5F5							// Gray
+// style-guide-element-background = white	// White
+
+
+/*------------------------------------------------------------------------------------------------------------*
+	$ DEPURADO---------------------------------------------------------------------------------------------------
+*------------------------------------------------------------------------------------------------------------*/
 mobile-medium = 350px	// Mobile Medium
-tablet = 500px				// Tablet
+// tablet = 500px				// Tablet
+tablet = 550px				// Tablet
 tablet-medium = 720px // Tablet Medium
 desktop = 920px 			// Desktop
 
 max-width = 1100px 		// Large screens
-
-// Style Guide
-style-guide-background = #F5F5F5							// Gray
-style-guide-element-background = white	// White
