--- a/public/stylus/index.styl
+++ b/public/stylus/index.styl
@@ -1,69 +1,87 @@
-/*------------------------------------*
-	$ NIB
-*------------------------------------*/
-@import 'nib'
+// /*------------------------------------*
+// 	$ NIB
+// *------------------------------------*/
+// @import 'nib'
 
-/*------------------------------------*
-	$ BASE
-*------------------------------------*/
+// /*------------------------------------*
+// 	$ BASE
+// *------------------------------------*/
+// @import 'base.styl'
+
+// /*------------------------------------*
+// 	$ LOGOS
+// *------------------------------------*/
+// @import 'elements/logos.styl'
+
+// /*------------------------------------*
+// 	$ MENUS
+// *------------------------------------*/
+// @import 'elements/menus.styl'
+
+// /*------------------------------------*
+// 	$ TEXTS
+// *------------------------------------*/
+// @import 'elements/texts.styl'
+
+// /*------------------------------------*
+// 	$ BUTTONS
+// *------------------------------------*/
+// @import 'elements/buttons.styl'
+
+// ------------------------------------*
+// 	$ WORKS
+// *------------------------------------
+// @import 'elements/works.styl'
+
+// /*------------------------------------*
+// 	$ LOGIN
+// *------------------------------------*/
+// @import 'elements/login.styl'
+
+// /*------------------------------------*
+// 	$ FORMS
+// *------------------------------------*/
+// @import 'elements/forms.styl'
+
+// /*------------------------------------*
+// 	$ INPUTS
+// *------------------------------------*/
+// @import 'elements/inputs.styl'
+
+
+// .slogan
+// 	padding 1rem
+// 	text-align center
+// 	max-width max-width
+// 	margin auto
+// 	.button-solid
+// 		margin .5rem
+		
+
+	
+// .works
+// 	max-width max-width
+// 	margin auto
+
+
+/*------------------------------------------------------------------------------------------------------------*
+	$ DEPURADO---------------------------------------------------------------------------------------------------
+*------------------------------------------------------------------------------------------------------------*/
+@import 'nib'
 @import 'base.styl'
 
-/*------------------------------------*
-	$ LOGOS
-*------------------------------------*/
+@import 'elements/menus.styl'
+@import 'elements/buttons.styl'
+@import 'elements/texts.styl'
+@import 'elements/inputs.styl'
 @import 'elements/logos.styl'
 
-/*------------------------------------*
-	$ MENUS
-*------------------------------------*/
-@import 'elements/menus.styl'
-
-/*------------------------------------*
-	$ TEXTS
-*------------------------------------*/
-@import 'elements/texts.styl'
-
-/*------------------------------------*
-	$ BUTTONS
-*------------------------------------*/
-@import 'elements/buttons.styl'
-
-/*------------------------------------*
-	$ WORKS
-*------------------------------------*/
-@import 'elements/works.styl'
-
-/*------------------------------------*
-	$ LOGIN
-*------------------------------------*/
-@import 'elements/login.styl'
-
-/*------------------------------------*
-	$ FORMS
-*------------------------------------*/
-@import 'elements/forms.styl'
-
-/*------------------------------------*
-	$ INPUTS
-*------------------------------------*/
-@import 'elements/inputs.styl'
-
-
-.slogan
-	padding 1rem
-	text-align center
-	max-width max-width
-	margin auto
-	.button-solid
-		margin .5rem
-		
-.works-menu
-	display flex
-	justify-content space-between
-	max-width max-width
-	margin auto
-	padding 0 1rem
-	
-.works
-	max-width max-width
-	margin auto
+@import 'objects/login.styl'
+@import 'objects/header.styl'
+@import 'objects/category-menu.styl'
+@import 'objects/slogan.styl'
+@import 'objects/slider.styl'
+@import 'objects/works-menu.styl'
+@import 'objects/works.styl'
+@import 'objects/more.styl'
+@import 'objects/footer.styl'
