--- a/public/stylus/objects/category-menu.styl
+++ b/public/stylus/objects/category-menu.styl
@@ -1,23 +1,13 @@
-
 /*------------------------------------------------------------------------------------------------------------*
 	$ DEPURADO---------------------------------------------------------------------------------------------------
 *------------------------------------------------------------------------------------------------------------*/
 
 /*------------------------------------*
-	$ LOGO
+	$ CATEGORY MENU
 *------------------------------------*/
-.logo
-	padding .5rem 1rem
-	display table-cell
-	&__small
-		max-width 2rem
-	&__normal
-		// max-width 10rem
-		max-width 15rem
-		display none
-
-@media (min-width mobile-medium)
-	.logo__small
-		display none
-	.logo__normal
-		display block
+.category-menu
+	border-top 1px solid #eee
+	border-bottom 1px solid #eee
+	.thick-menu
+		max-width max-width
+		margin auto
