--- a/public/stylus/objects/header.styl
+++ b/public/stylus/objects/header.styl
@@ -4,20 +4,11 @@
 *------------------------------------------------------------------------------------------------------------*/
 
 /*------------------------------------*
-	$ LOGO
+	$ HEADER
 *------------------------------------*/
-.logo
-	padding .5rem 1rem
-	display table-cell
-	&__small
-		max-width 2rem
-	&__normal
-		// max-width 10rem
-		max-width 15rem
-		display none
-
-@media (min-width mobile-medium)
-	.logo__small
-		display none
-	.logo__normal
-		display block
+.header
+	display flex
+	justify-content space-between
+	align-items center
+	max-width max-width
+	margin .5rem auto
