--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,9 +1,6 @@
-/*------------------------------------*
-	$ NIB
-*------------------------------------*/
-/*------------------------------------*
-	$ BASE
-*------------------------------------*/
+/*------------------------------------------------------------------------------------------------------------*
+	$ DEPURADO---------------------------------------------------------------------------------------------------
+*------------------------------------------------------------------------------------------------------------*/
 body {
   margin: 0;
 }
@@ -55,61 +52,6 @@ html {
     font-size: 100%;
   }
 }
-.header {
-  display: -webkit-box;
-  display: -moz-box;
-  display: -webkit-flex;
-  display: -ms-flexbox;
-  display: box;
-  display: flex;
-  -webkit-box-pack: justify;
-  -moz-box-pack: justify;
-  -o-box-pack: justify;
-  -ms-flex-pack: justify;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  -o-box-align: center;
-  -ms-flex-align: center;
-  -webkit-align-items: center;
-  align-items: center;
-  max-width: 1100px;
-  margin: 0.5rem auto;
-}
-.category-menu {
-  border-top: 1px solid #eee;
-  border-bottom: 1px solid #eee;
-}
-.category-menu .thick-menu {
-  max-width: 1100px;
-  margin: auto;
-}
-/*------------------------------------*
-	$ LOGOS
-*------------------------------------*/
-.logo {
-  padding: 0.5rem 1rem;
-  display: table-cell;
-}
-.logo__small {
-  max-width: 2rem;
-}
-.logo__normal {
-  max-width: 10rem;
-  display: none;
-}
-@media (min-width: 350px) {
-  .logo__small {
-    display: none;
-  }
-  .logo__normal {
-    display: block;
-  }
-}
-/*------------------------------------*
-	$ MENUS
-*------------------------------------*/
 .skinny-menu {
   display: -webkit-box;
   display: -moz-box;
@@ -125,6 +67,10 @@ html {
 .skinny-menu__item {
   color: #000;
   padding: 0.5em 1rem;
+  cursor: pointer;
+}
+.skinny-menu__item__icon {
+  font-size: 0.9rem;
 }
 .skinny-menu__item.active {
   border-bottom: 0.25em solid #000;
@@ -132,9 +78,12 @@ html {
 .skinny-menu[data-icon='true'] .skinny-menu__item__text {
   display: none;
 }
-@media (min-width: 500px) {
+@media (min-width: 550px) {
   .skinny-menu[data-icon='true'] .skinny-menu__item__text {
     display: inline;
+  }
+  .skinny-menu[data-icon='true'] .skinny-menu__item__icon {
+    display: none;
   }
 }
 .thick-menu {
@@ -153,43 +102,59 @@ html {
   color: #000;
   padding: 0.5rem 1rem;
 }
-/*------------------------------------*
-	$ TEXTS
-*------------------------------------*/
-.high-text {
-  color: #000;
-  font-size: 1rem;
-  letter-spacing: 1px;
-  font-family: 'Raleway';
-}
-.high-text[data-size='small'] {
+.facebook-button {
+  color: #fff;
+  display: table-cell;
+  padding: 0.75rem;
+  font-weight: 600;
   font-size: 0.9rem;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  letter-spacing: 1px;
+  font-family: 'Roboto Condensed';
+  background: -webkit-linear-gradient(#4e69a2, #3b5998);
+  background: -moz-linear-gradient(#4e69a2, #3b5998);
+  background: -o-linear-gradient(#4e69a2, #3b5998);
+  background: -ms-linear-gradient(#4e69a2, #3b5998);
+  background: linear-gradient(#4e69a2, #3b5998);
 }
-.skinny-text {
-  color: #000;
+.facebook-button i {
+  font-size: 1.25em;
+}
+.facebook-button[data-expand='true'] {
+  display: block;
+  text-align: center;
+}
+.button-solid {
+  color: #fff;
+  cursor: pointer;
   font-size: 1rem;
-  letter-spacing: 0.5px;
+  padding: 0.5em 1em;
+  background: #3000ff;
+  display: table-cell;
+  text-transform: uppercase;
   font-family: 'Roboto Condensed';
 }
-.skinny-text[data-color='light'] {
-  color: #aaa;
-}
-.skinny-text[data-size='small'] {
+.button-solid[data-size='small'] {
   font-size: 0.85rem;
 }
-.slogan-text {
-  font-family: 'Oswald';
-  font-size: 1.5rem;
-  color: #585858;
-  letter-spacing: 0.5px;
+.button-solid[data-size='large'] {
+  font-size: 1.15rem;
 }
-.medium-text {
-  color: #585858;
-  font-weight: 600;
-  font-size: 0.85rem;
+.button-solid[data-color='red'] {
+  background: #f54545;
+}
+.button-solid[data-expand='true'] {
+  display: block;
+  text-align: center;
+  width: 100%;
+}
+.button-link {
+  color: #3000ff;
+  font-size: 0.8em;
   letter-spacing: 1px;
-  font-family: 'Raleway';
   text-transform: uppercase;
+  font-family: 'Roboto Condensed';
 }
 .separator-text {
   text-transform: uppercase;
@@ -224,122 +189,274 @@ html {
 .separator-text .text {
   padding: 0 1em;
 }
-/*------------------------------------*
-	$ BUTTONS
-*------------------------------------*/
-.button-solid {
-  color: #fff;
-  cursor: pointer;
+.high-text {
+  color: #000;
   font-size: 1rem;
-  padding: 0.5em 1em;
-  background: #3000ff;
-  display: table-cell;
-  text-transform: uppercase;
+  letter-spacing: 1px;
+  font-family: 'Raleway';
+  line-height: 1.25;
+}
+.high-text[data-size='small'] {
+  font-size: 0.9rem;
+}
+.high-text[data-color='light'] {
+  color: #aaa;
+}
+.skinny-text {
+  color: #000;
+  font-size: 1rem;
+  letter-spacing: 0.5px;
   font-family: 'Roboto Condensed';
 }
-.button-solid[data-size='small'] {
+.skinny-text[data-color='light'] {
+  color: #aaa;
+}
+.skinny-text[data-size='small'] {
   font-size: 0.85rem;
 }
-.button-solid[data-size='large'] {
-  font-size: 1.15rem;
+.high-text[data-color='white'] {
+  color: #fff;
 }
-.button-solid[data-color='red'] {
-  background: #f54545;
+.medium-text {
+  color: #585858;
+  font-weight: 600;
+  font-size: 0.85rem;
+  letter-spacing: 1px;
+  font-family: 'Raleway';
+  text-transform: uppercase;
 }
-.button-solid[data-expand='true'] {
-  display: block;
-  text-align: center;
+.slogan-text {
+  font-family: 'Oswald';
+  font-size: 1.5rem;
+  color: #585858;
+  letter-spacing: 0.5px;
+}
+.input {
+  font-size: 1rem;
+  padding: 0.5em;
+  color: #555;
+  border: 1px solid #ccc;
   width: 100%;
 }
-.button-liner {
-  color: #000;
-  cursor: pointer;
-  font-size: 1rem;
-  letter-spacing: 1px;
-  display: table-cell;
-  border: 1px solid #bbb;
-  text-transform: uppercase;
-  font-family: 'Roboto Condensed';
+.input:focus {
+  border-color: rgba(82,168,236,0.8);
+  -webkit-box-shadow: 0 0 8px rgba(82,168,236,0.6);
+  box-shadow: 0 0 8px rgba(82,168,236,0.6);
 }
-.button-liner__action {
-  padding: 0.5em 0.75em;
-  display: table-cell;
-}
-.button-liner__action.following,
-.button-liner__action.cancel {
-  display: none;
-}
-.button-liner__number {
-  padding: 0.5em;
-  display: table-cell;
-  border-left: 1px solid #bbb;
-}
-.button-liner[data-size='small'] {
-  font-size: 0.85rem;
-}
-.button-liner[data-size='large'] {
+.input[data-size='large'] {
   font-size: 1.15rem;
 }
-.button-liner.disabled {
-  color: #aaa;
-  border-color: #ccc;
-}
-.button-liner.disabled .button-liner__number {
-  border-color: #bbb;
-}
-.button-liner.disabled .button-liner__action.folllow {
-  display: none;
-}
-.button-liner.disabled .button-liner__action.following {
+.logo {
+  padding: 0.5rem 1rem;
   display: table-cell;
 }
-.button-liner.disabled:hover .button-liner__action.following {
+.logo__small {
+  max-width: 2rem;
+}
+.logo__normal {
+  max-width: 15rem;
   display: none;
 }
-.button-liner.disabled:hover .button-liner__action.cancel {
-  display: table-cell;
+@media (min-width: 350px) {
+  .logo__small {
+    display: none;
+  }
+  .logo__normal {
+    display: block;
+  }
 }
-.facebook-button {
+.login-modal {
+  position: absolute;
+  top: 0;
+  bottom: 0;
+  width: 100%;
+  background: rgba(0,0,0,0.6);
+  padding: 3rem 1.5rem;
+  overflow: auto;
+  display: none;
+}
+.login-box {
+  background: #fff;
+  max-width: 400px;
+  margin: auto;
+  padding: 1rem 1.5rem;
+  position: relative;
+}
+.login-box__header {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  padding: 0.5rem;
+}
+.login-box__form .facebook-button {
+  margin: 1rem 0;
+}
+.login-box__form .input,
+.login-box__form .separator-text,
+.login-box__form .button-solid {
+  margin: 0.5rem 0;
+}
+.login-box__form .question {
+  margin: 1rem 0;
+}
+.login-box__form .note {
+  margin: 1rem 0;
+  font-style: italic;
+}
+.login-box__closed {
+  position: absolute;
+  top: 0;
+  right: 0;
+  -webkit-transform: translate(75%, -75%);
+  -moz-transform: translate(75%, -75%);
+  -o-transform: translate(75%, -75%);
+  -ms-transform: translate(75%, -75%);
+  transform: translate(75%, -75%);
   color: #fff;
-  display: table-cell;
-  padding: 0.75rem;
-  font-weight: 600;
-  font-size: 0.9rem;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  letter-spacing: 1px;
-  font-family: 'Roboto Condensed';
-  background: -webkit-linear-gradient(#4e69a2, #3b5998);
-  background: -moz-linear-gradient(#4e69a2, #3b5998);
-  background: -o-linear-gradient(#4e69a2, #3b5998);
-  background: -ms-linear-gradient(#4e69a2, #3b5998);
-  background: linear-gradient(#4e69a2, #3b5998);
-}
-.facebook-button i {
-  font-size: 1.25em;
-}
-.facebook-button[data-expand='true'] {
-  display: block;
-  text-align: center;
-}
-.button-link {
-  color: #3000ff;
-  font-size: 0.8em;
-  letter-spacing: 1px;
-  text-transform: uppercase;
-  font-family: 'Roboto Condensed';
-}
-.button-filter {
-  padding: 0.5em 0.75rem;
-  font-family: 'Raleway';
-  border: 1px solid #ddd;
+  font-size: 1.25rem;
+  padding: 0.5rem;
   cursor: pointer;
 }
-/*------------------------------------*
-	$ WORKS
-*------------------------------------*/
-.works {
+.header {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-pack: justify;
+  -moz-box-pack: justify;
+  -o-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  -o-box-align: center;
+  -ms-flex-align: center;
+  -webkit-align-items: center;
+  align-items: center;
+  max-width: 1100px;
+  margin: 0.5rem auto;
+}
+.category-menu {
+  border-top: 1px solid #eee;
+  border-bottom: 1px solid #eee;
+}
+.category-menu .thick-menu {
+  max-width: 1100px;
+  margin: auto;
+}
+.slogan {
+  padding: 1rem;
+  text-align: center;
+  max-width: 1100px;
+  margin: auto;
+}
+.slogan .button-solid {
+  margin: 0.5rem;
+}
+.slider-small {
+  max-width: 600px;
+  margin: auto;
+}
+.slider-small__nav {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+  padding: 0.5rem;
+}
+.slider-small__nav__item {
+  font-size: 0.6rem;
+  color: #ddd;
+  margin: 0.25rem;
+  padding: 0.25rem;
+  cursor: pointer;
+}
+.slider-small__nav__item.active {
+  color: #bbb;
+}
+.slider-small__items {
+  white-space: nowrap;
+  font-size: 0;
   overflow: hidden;
+}
+.slider-small__item {
+  display: inline-block;
+  vertical-align: top;
+  width: 100%;
+  white-space: normal;
+  -webkit-transition: -webkit-transform 700ms ease-out;
+  -moz-transition: -moz-transform 700ms ease-out;
+  -o-transition: -o-transform 700ms ease-out;
+  -ms-transition: -ms-transform 700ms ease-out;
+  transition: transform 700ms ease-out;
+}
+.slider-large {
+  display: none;
+  max-width: 1100px;
+  margin: auto;
+}
+.slider-large__items {
+  padding: 0.5rem;
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+}
+.slider-large__item {
+  margin: 0.5rem;
+}
+@media (min-width: 720px) {
+  .slider-small {
+    display: none;
+  }
+  .slider-large {
+    display: block;
+  }
+}
+.works-menu {
+  display: -webkit-box;
+  display: -moz-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: box;
+  display: flex;
+  -webkit-box-pack: justify;
+  -moz-box-pack: justify;
+  -o-box-pack: justify;
+  -ms-flex-pack: justify;
+  -webkit-justify-content: space-between;
+  justify-content: space-between;
+  max-width: 1100px;
+  margin: auto;
+  padding: 0 1rem;
+}
+.works {
+  padding: 0 0.5rem;
+  overflow: hidden;
+  max-width: 1100px;
+  margin: auto;
 }
 .works .work {
   display: block;
@@ -406,26 +523,22 @@ html {
 .size-1of6 {
   width: 16.666666666666668%;
 }
-/*------------------------------------*
-	$ LOGIN
-*------------------------------------*/
-.login-modal {
-  position: absolute;
-  top: 0;
-  bottom: 0;
-  width: 100%;
-  background: rgba(0,0,0,0.6);
-  padding: 3rem 1rem;
-  overflow: auto;
-  display: none;
-}
-.login-box {
-  background: #fff;
-  max-width: 400px;
+.more {
+  max-width: 1100px;
   margin: auto;
-  padding: 1rem 1.5rem 1.5rem 1.5rem;
+  text-align: center;
 }
-.login-box__header {
+.footer-container {
+  background: #181818;
+}
+.footer {
+  max-width: 1100px;
+  margin: auto;
+  color: #fff;
+  text-align: center;
+  padding: 1.5rem 0;
+}
+.footer__logo {
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
@@ -438,95 +551,64 @@ html {
   -ms-flex-pack: center;
   -webkit-justify-content: center;
   justify-content: center;
-  padding: 0.5rem;
+  padding: 1rem 0;
 }
-/*------------------------------------*
-	$ FORMS
-*------------------------------------*/
-.login-form .facebook-button,
-.register-form .facebook-button {
-  margin: 1rem 0 1.5rem 0;
+.footer__section {
+  padding: 0.25rem 0;
 }
-.login-form input,
-.register-form input,
-.login-form .separator-text,
-.register-form .separator-text {
-  margin: 0.5rem 0;
-}
-/*------------------------------------*
-	$ INPUTS
-*------------------------------------*/
-.search {
-  position: relative;
-}
-.search input {
-  width: 100%;
-  -webkit-border-radius: 4px;
-  border-radius: 4px;
-  border: 1px solid #ccc;
-  padding: 0.5em 0 0.5em 2em;
-  color: #555;
-  font-size: 1rem;
-}
-.search i {
-  position: absolute;
-  top: 50%;
-  -webkit-transform: translate(0, -50%);
-  -moz-transform: translate(0, -50%);
-  -o-transform: translate(0, -50%);
-  -ms-transform: translate(0, -50%);
-  transform: translate(0, -50%);
-  left: 0.75em;
-  color: #808080;
-}
-.input[type="text"],
-.input[type="email"],
-.input[type="password"] {
-  font-size: 1rem;
-  padding: 0.5em;
-  color: #555;
-  border: 1px solid #ccc;
-  width: 100%;
-}
-.input[type="text"]:focus,
-.input[type="email"]:focus,
-.input[type="password"]:focus {
-  border-color: rgba(82,168,236,0.8);
-  -webkit-box-shadow: 0 0 8px rgba(82,168,236,0.6);
-  box-shadow: 0 0 8px rgba(82,168,236,0.6);
-}
-.input[type="text"][data-size='large'],
-.input[type="email"][data-size='large'],
-.input[type="password"][data-size='large'] {
-  font-size: 1.15rem;
-}
-.slogan {
-  padding: 1rem;
-  text-align: center;
-  max-width: 1100px;
-  margin: auto;
-}
-.slogan .button-solid {
-  margin: 0.5rem;
-}
-.works-menu {
+.footer__section.links {
   display: -webkit-box;
   display: -moz-box;
   display: -webkit-flex;
   display: -ms-flexbox;
   display: box;
   display: flex;
-  -webkit-box-pack: justify;
-  -moz-box-pack: justify;
-  -o-box-pack: justify;
-  -ms-flex-pack: justify;
-  -webkit-justify-content: space-between;
-  justify-content: space-between;
-  max-width: 1100px;
-  margin: auto;
+  -webkit-box-pack: center;
+  -moz-box-pack: center;
+  -o-box-pack: center;
+  -ms-flex-pack: center;
+  -webkit-justify-content: center;
+  justify-content: center;
+}
+.footer__section.links p {
+  padding: 0.5rem;
+}
+.footer__section.copyright {
   padding: 0 1rem;
 }
-.works {
-  max-width: 1100px;
-  margin: auto;
+.footer__section.social i {
+  padding: 0.5rem;
+  margin: 0 0.5rem;
+  font-size: 1.15rem;
+}
+@media (min-width: 920px) {
+  .footer__sections {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: box;
+    display: flex;
+    -webkit-box-align: center;
+    -moz-box-align: center;
+    -o-box-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+  }
+  .footer__section {
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -o-box-flex: 1;
+    box-flex: 1;
+    -webkit-flex: 1;
+    -ms-flex: 1;
+    flex: 1;
+  }
+  .footer__section.copyright {
+    text-align: left;
+  }
+  .footer__section.social {
+    text-align: right;
+  }
 }
