--- a/public/stylus/elements/buttons.styl
+++ b/public/stylus/elements/buttons.styl
@@ -1,3 +1,141 @@
+// /*------------------------------------*
+// 	$ BUTTON SOLID
+// *------------------------------------*/
+// .button-solid
+// 	color white
+// 	cursor pointer
+// 	font-size 1rem
+// 	padding .5em 1em
+// 	background #3000ff
+// 	display table-cell
+// 	text-transform uppercase
+// 	font-family 'Roboto Condensed'
+	
+// 	&[data-size='small']
+// 		font-size .85rem
+// 	&[data-size='large']
+// 		font-size 1.15rem
+		
+// 	&[data-color='red']
+// 		background #f54545
+		
+// 	&[data-expand='true']
+// 		display block
+// 		text-align center
+// 		width 100%
+
+
+// /*------------------------------------*
+// 	$ BUTTON LINER
+// *------------------------------------*/
+// .button-liner
+// 	color #000
+// 	cursor pointer
+// 	font-size 1rem
+// 	letter-spacing 1px
+// 	display table-cell
+// 	border 1px solid #bbb
+// 	text-transform uppercase
+// 	font-family 'Roboto Condensed'
+// 	&__action
+// 		padding .5em .75em
+// 		display table-cell
+// 		&.following
+// 		&.cancel
+// 			display none
+// 	&__number
+// 		padding .5em
+// 		display table-cell
+// 		border-left 1px solid #bbb
+	
+// 	&[data-size='small']
+// 		font-size .85rem
+// 	&[data-size='large']
+// 		font-size 1.15rem
+	
+// .button-liner.disabled
+// 	color #aaa
+// 	border-color #ccc
+// 	.button-liner__number
+// 		border-color #bbb
+// 	.button-liner__action
+// 		&.folllow
+// 			display none
+// 		&.following
+// 			display table-cell
+// 	&:hover
+// 		.button-liner__action
+// 			&.following
+// 				display none
+// 			&.cancel
+// 				display table-cell
+
+// /*------------------------------------*
+// 	$ FACEBOOK
+// *------------------------------------*/
+// .facebook-button
+// 	color white
+// 	display table-cell
+// 	padding .75rem
+// 	font-weight 600
+// 	font-size .9rem
+// 	border-radius 4px
+// 	letter-spacing 1px
+// 	font-family 'Roboto Condensed'
+// 	background linear-gradient(#4e69a2,#3b5998)
+// 	i
+// 		font-size 1.25em
+// 	&[data-expand='true']
+// 		display block
+// 		text-align center
+
+
+// /*------------------------------------*
+// 	$ BUTTON LINK
+// *------------------------------------*/
+// .button-link
+// 	color #3000ff
+// 	font-size .8em
+// 	letter-spacing 1px
+// 	text-transform uppercase
+// 	font-family 'Roboto Condensed'
+
+
+// /*------------------------------------*
+// 	$ BUTTON FILTER
+// *------------------------------------*/
+// .button-filter
+// 	padding .5em .75rem
+// 	font-family 'Raleway'
+// 	border 1px solid #ddd
+// 	cursor pointer
+
+
+
+/*------------------------------------------------------------------------------------------------------------*
+	$ DEPURADO---------------------------------------------------------------------------------------------------
+*------------------------------------------------------------------------------------------------------------*/
+
+/*------------------------------------*
+	$ FACEBOOK
+*------------------------------------*/
+.facebook-button
+	color white
+	display table-cell
+	padding .75rem
+	font-weight 600
+	font-size .9rem
+	border-radius 4px
+	letter-spacing 1px
+	font-family 'Roboto Condensed'
+	background linear-gradient(#4e69a2,#3b5998)
+	i
+		font-size 1.25em
+	&[data-expand='true']
+		display block
+		text-align center
+		
+		
 /*------------------------------------*
 	$ BUTTON SOLID
 *------------------------------------*/
@@ -23,73 +161,8 @@
 		display block
 		text-align center
 		width 100%
-
-
-/*------------------------------------*
-	$ BUTTON LINER
-*------------------------------------*/
-.button-liner
-	color #000
-	cursor pointer
-	font-size 1rem
-	letter-spacing 1px
-	display table-cell
-	border 1px solid #bbb
-	text-transform uppercase
-	font-family 'Roboto Condensed'
-	&__action
-		padding .5em .75em
-		display table-cell
-		&.following
-		&.cancel
-			display none
-	&__number
-		padding .5em
-		display table-cell
-		border-left 1px solid #bbb
-	
-	&[data-size='small']
-		font-size .85rem
-	&[data-size='large']
-		font-size 1.15rem
-	
-.button-liner.disabled
-	color #aaa
-	border-color #ccc
-	.button-liner__number
-		border-color #bbb
-	.button-liner__action
-		&.folllow
-			display none
-		&.following
-			display table-cell
-	&:hover
-		.button-liner__action
-			&.following
-				display none
-			&.cancel
-				display table-cell
-
-/*------------------------------------*
-	$ FACEBOOK
-*------------------------------------*/
-.facebook-button
-	color white
-	display table-cell
-	padding .75rem
-	font-weight 600
-	font-size .9rem
-	border-radius 4px
-	letter-spacing 1px
-	font-family 'Roboto Condensed'
-	background linear-gradient(#4e69a2,#3b5998)
-	i
-		font-size 1.25em
-	&[data-expand='true']
-		display block
-		text-align center
-
-
+		
+		
 /*------------------------------------*
 	$ BUTTON LINK
 *------------------------------------*/
@@ -99,13 +172,3 @@
 	letter-spacing 1px
 	text-transform uppercase
 	font-family 'Roboto Condensed'
-
-
-/*------------------------------------*
-	$ BUTTON FILTER
-*------------------------------------*/
-.button-filter
-	padding .5em .75rem
-	font-family 'Raleway'
-	border 1px solid #ddd
-	cursor pointer
