--- a/public/stylus/elements/inputs.styl
+++ b/public/stylus/elements/inputs.styl
@@ -1,30 +1,54 @@
-/*------------------------------------*
-	$ SEARCH
-*------------------------------------*/
-.search
-	position relative
-	input
-		width 100%
-		border-radius 4px
-		border 1px solid #cccccc
-		// padding .75em 0 .75em 2em
-		padding .5em 0 .5em 2em
-		color #555
-		font-size 1rem
-		// font-size .95rem
-	i
-		position absolute
-		top 50%
-		transform translate(0, -50%)
-		left .75em
-		color gray
+// /*------------------------------------*
+// 	$ SEARCH
+// *------------------------------------*/
+// .search
+// 	position relative
+// 	input
+// 		width 100%
+// 		border-radius 4px
+// 		border 1px solid #cccccc
+// 		// padding .75em 0 .75em 2em
+// 		padding .5em 0 .5em 2em
+// 		color #555
+// 		font-size 1rem
+// 		// font-size .95rem
+// 	i
+// 		position absolute
+// 		top 50%
+// 		transform translate(0, -50%)
+// 		left .75em
+// 		color gray
+
+// /*------------------------------------*
+// 	$ INPUT
+// *------------------------------------*/
+// .input[type="text"]
+// .input[type="email"]
+// .input[type="password"]
+// 	font-size 1rem
+// 	padding .5em
+// 	color #555
+// 	border 1px solid #cccccc
+// 	width 100%
+// 	&:focus
+// 		border-color rgba(82,168,236,0.8)
+// 		box-shadow 0 0 8px rgba(82,168,236,0.6)
+// 	&[data-size='large']
+// 		font-size 1.15rem
+
+
+
+/*------------------------------------------------------------------------------------------------------------*
+	$ DEPURADO---------------------------------------------------------------------------------------------------
+*------------------------------------------------------------------------------------------------------------*/
 
 /*------------------------------------*
 	$ INPUT
 *------------------------------------*/
-.input[type="text"]
-.input[type="email"]
-.input[type="password"]
+// .input[type="text"]
+// .input[type="email"]
+// .input[type="password"]
+.input
 	font-size 1rem
 	padding .5em
 	color #555
