--- a/public/stylus/elements/texts.styl
+++ b/public/stylus/elements/texts.styl
@@ -1,53 +1,77 @@
-/*------------------------------------*
-	$ HIGHT TEXT
-*------------------------------------*/
-.high-text
-	color #000
-	font-size 1rem
-	letter-spacing 1px
-	font-family 'Raleway'
+// /*------------------------------------*
+// 	$ HIGHT TEXT
+// *------------------------------------*/
+// .high-text
+// 	color #000
+// 	font-size 1rem
+// 	letter-spacing 1px
+// 	font-family 'Raleway'
 
-.high-text[data-size='small']
-	font-size .9rem
+// .high-text[data-size='small']
+// 	font-size .9rem
 
 
-/*------------------------------------*
-	$ SKINNY TEXT
-*------------------------------------*/
-.skinny-text
-	color #000
-	font-size 1rem
-	letter-spacing .5px
-	font-family 'Roboto Condensed'
+// /*------------------------------------*
+// 	$ SKINNY TEXT
+// *------------------------------------*/
+// .skinny-text
+// 	color #000
+// 	font-size 1rem
+// 	letter-spacing .5px
+// 	font-family 'Roboto Condensed'
 	
-.skinny-text[data-color='light']
-	color #aaa
+// .skinny-text[data-color='light']
+// 	color #aaa
 
-.skinny-text[data-size='small']
-	font-size .85rem
-
-
-/*------------------------------------*
-	$ SLOGAN TEXT
-*------------------------------------*/
-.slogan-text
-	font-family 'Oswald'
-	font-size 1.5rem
-	color #585858
-	letter-spacing 0.5px
+// .skinny-text[data-size='small']
+// 	font-size .85rem
 
 
-/*------------------------------------*
-	$ MEDIUM TEXT
-*------------------------------------*/
-.medium-text
-	color #585858
-	font-weight 600
-	font-size .85rem
-	letter-spacing 1px
-	font-family 'Raleway'
-	text-transform uppercase
+// /*------------------------------------*
+// 	$ SLOGAN TEXT
+// *------------------------------------*/
+// .slogan-text
+// 	font-family 'Oswald'
+// 	font-size 1.5rem
+// 	color #585858
+// 	letter-spacing 0.5px
 
+
+// /*------------------------------------*
+// 	$ MEDIUM TEXT
+// *------------------------------------*/
+// .medium-text
+// 	color #585858
+// 	font-weight 600
+// 	font-size .85rem
+// 	letter-spacing 1px
+// 	font-family 'Raleway'
+// 	text-transform uppercase
+
+
+// /*------------------------------------*
+// 	$ SEPARATOR TEXT
+// *------------------------------------*/
+// .separator-text
+// 	text-transform uppercase
+// 	color #aaa
+// 	font-family 'Oswald'
+// 	font-size .8em
+// 	letter-spacing 1.5px
+// 	display flex
+// 	align-items center
+// 	.line
+// 		flex 1
+// 		height 1px
+// 		background #eee
+// 	.text
+// 		padding 0 1em
+
+
+
+/*------------------------------------------------------------------------------------------------------------*
+	$ DEPURADO---------------------------------------------------------------------------------------------------
+*------------------------------------------------------------------------------------------------------------*/
 
 /*------------------------------------*
 	$ SEPARATOR TEXT
@@ -66,3 +90,61 @@
 		background #eee
 	.text
 		padding 0 1em
+		
+		
+/*------------------------------------*
+	$ HIGHT TEXT
+*------------------------------------*/
+.high-text
+	color #000
+	font-size 1rem
+	letter-spacing 1px
+	font-family 'Raleway'
+	line-height 1.25
+
+.high-text[data-size='small']
+	font-size .9rem
+
+.high-text[data-color='light']
+	color #aaa
+	
+	
+/*------------------------------------*
+	$ SKINNY TEXT
+*------------------------------------*/
+.skinny-text
+	color #000
+	font-size 1rem
+	letter-spacing .5px
+	font-family 'Roboto Condensed'
+	
+.skinny-text[data-color='light']
+	color #aaa
+
+.skinny-text[data-size='small']
+	font-size .85rem
+	
+.high-text[data-color='white']
+	color white
+	
+
+/*------------------------------------*
+	$ MEDIUM TEXT
+*------------------------------------*/
+.medium-text
+	color #585858
+	font-weight 600
+	font-size .85rem
+	letter-spacing 1px
+	font-family 'Raleway'
+	text-transform uppercase
+	
+	
+/*------------------------------------*
+	$ SLOGAN TEXT
+*------------------------------------*/
+.slogan-text
+	font-family 'Oswald'
+	font-size 1.5rem
+	color #585858
+	letter-spacing 0.5px
