--- a/public/stylus/lib/mixins.styl
+++ b/public/stylus/lib/mixins.styl
@@ -1,3 +1,8 @@
+
+/*------------------------------------------------------------------------------------------------------------*
+	$ DEPURADO---------------------------------------------------------------------------------------------------
+*------------------------------------------------------------------------------------------------------------*/
+
 /*------------------------------------*
 	$INT TO STRING
 *------------------------------------*/
