--- a/public/stylus/lib/reset.styl
+++ b/public/stylus/lib/reset.styl
@@ -1,3 +1,7 @@
+
+/*------------------------------------------------------------------------------------------------------------*
+	$ DEPURADO---------------------------------------------------------------------------------------------------
+*------------------------------------------------------------------------------------------------------------*/
 body
 	margin 0
 
