new refactor and search view

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -20,7 +20,7 @@
 		$ HEADER
 	********************************************************************* -->
 	<header class="header">
-		<a class="logo" href="#">
+		<a class="logo" href="/">
 			<img class="logo__small" src="/img/logo-small.png">
 			<img class="logo__normal" src="/img/logo.png">
 		</a>
@@ -103,7 +103,7 @@
 	********************************************************************* -->
 	<section class="works-menu">
 		<p class="medium-text">Obras recomendadas</p>
-		<a class="button-link" href="#">Todas <i class="fa fa-angle-right"></i></a>
+		<a class="button-link" href="/works/category/all/page-1">Todas <i class="fa fa-angle-right"></i></a>
 	</section>
 
 
@@ -268,20 +268,19 @@
 		</div>
 	</section>
 
+
 	<script src="/js/vendor/jquery.min.js"></script>
 	<script src="js/vendor/salvattore.js"></script>
 	
-	<script type="text/javascript" src="js/vendor/hammer.min.js"></script>
+	<script src="js/vendor/hammer.min.js"></script>
 
-	<script type="text/javascript" src="js/lib/login.js"></script>
-	<script type="text/javascript" src="js/lib/slider.js"></script>
+	<script src="js/lib/login.js"></script>
+	<script src="js/lib/slider.js"></script>
 
 	<script type="text/javascript">
 		// window.workFeatureds = {{ workFeatureds|json|safe }};
 		// console.log('workFeatureds: ', workFeatureds)
 	</script>
-
-	<!-- // <script type="text/javascript" src="js/index.js"></script> -->
 
 </body>
 </html>
