--- a/public/stylus/elements/buttons.styl
+++ b/public/stylus/elements/buttons.styl
@@ -172,3 +172,13 @@
 	letter-spacing 1px
 	text-transform uppercase
 	font-family 'Roboto Condensed'
+	
+
+/*------------------------------------*
+	$ BUTTON FILTER
+*------------------------------------*/
+.button-filter
+	padding .5em .75rem
+	font-family 'Raleway'
+	border 1px solid #ddd
+	cursor pointer
