--- a/app/views/pages/works.html
+++ b/app/views/pages/works.html
@@ -16,27 +16,366 @@
 </head>
 <body>
 
-	{% include "../partial/header.html"%}
+	<!-- ********************************************************************
+		$ HEADER
+	********************************************************************* -->
+	<header class="header">
+		<a class="logo" href="/">
+			<img class="logo__small" src="/img/logo-small.png">
+			<img class="logo__normal" src="/img/logo.png">
+		</a>
+		<nav class="skinny-menu" data-icon='true'>
+			<a  class="skinny-menu__item active" href="/works/category/all/page-1">
+				<i class="skinny-menu__item__icon fa fa-search"></i>
+				<span class="skinny-menu__item__text">Descubre</span>
+			</a>
+			<a href="#" class="skinny-menu__item">
+				<i class="skinny-menu__item__icon fa fa-diamond"></i>
+				<span class="skinny-menu__item__text">Market</span>
+			</a>
+			<a class="skinny-menu__item js-signInButton">
+				<i class="skinny-menu__item__icon fa fa-user"></i>
+				<span class="skinny-menu__item__text">Sign in</span>
+			</a>
+		</nav>
+	</header>
 
-	<section class="category-menu">
-		<div class="thick-menu">
-			<a href="#" class="thick-menu__item">Descubrir Artistas</a>
-			<a href="#" class="thick-menu__item">Descubrir Obras</a>
-			<!-- <a href="#" class="thick-menu__item">Art</a>
-			<a href="#" class="thick-menu__item">Home</a>
-			<a href="#" class="thick-menu__item">Kids</a>
-			<a href="#" class="thick-menu__item">Music</a> -->
+
+	<!-- ********************************************************************
+		$ SLOGAN
+	********************************************************************* -->
+	<section class="slogan">
+		<span class="slogan-text">Descubre Geniales Diseños en Increibles Productos</span>
+		<button class="button-solid js-signUpButton" data-size='large'>Sign Up</button>
+	</section>
+
+
+	<!-- ********************************************************************
+		$ FILTERS MENU
+	********************************************************************* -->
+	<section class="filters-menu">
+		<div class="filters-menu__search">
+			<div class="search">
+				<input type="text" placeholder="Busca Obras, Artistas y Productos">
+				<i class="fa fa-search"></i>
+			</div>
+		</div>
+		<div class="filters-menu__category js-leftFiltersButton">
+			<button class="button-filter js-leftFiltersButton"><i class="fa fa-caret-left"></i> &nbsp Categorías</button>
+		</div>
+		<div class="filters-menu__order js-rightFiltersButton">
+			<button class="button-filter js-rightFiltersButton">Ordenar &nbsp <i class="fa fa-caret-right"></i></button>
 		</div>
 	</section>
 
-	{% if !user %}
+
+	<!-- ********************************************************************
+		$ WORKS CONTAINER
+	********************************************************************* -->
+	<div class="works-container">
+		<div class="works-container__filters left js-leftFilters">
+			<div class="filters">
+				<div class="filters__title">Categorías</div>
+				{% for category in categories %}
+					<div class="filter js-category" data-value="{{ category.nameSlugify }}">{{ category.name }}</div>
+				{% endfor %}
+	<!-- <div class="filter js-category" data-value="holi!">Dibujo</div>
+				<div class="filter js-category" data-value="holi!">Ilustración</div>
+				<div class="filter js-category" data-value="holi!">Pintura</div>
+				<div class="filter js-category" data-value="holi!">Arte</div>
+				<div class="filter js-category" data-value="holi!">Fotografía</div>
+				<div class="filter js-category" data-value="holi!">Escultura</div>
+				<div class="filter js-category" data-value="holi!">Instalación</div>
+				<div class="filter js-category" data-value="holi!">Técnica Mixta</div>
+				<div class="filter js-category" data-value="holi!">Grabado</div> -->
+			</div>
+		</div>
+		<div class="works-container__filters right js-rightFilters">
+			<div class="filters">
+				<div class="filters__title">Orden</div>
+				<div class="filter js-order" data-value="popularity">Más popular</div>
+				<div class="filter js-order" data-value="views">Más visto</div>
+				<div class="filter js-order" data-value="newest">Más reciente</div>
+			</div>
+			<div class="filters">
+				<div class="filters__title">Tiempo</div>
+				<div class="filter js-time" data-value="day">Día</div>
+				<div class="filter js-time" data-value="week">Semana</div>
+				<div class="filter js-time" data-value="month">Mes</div>
+				<div class="filter js-time" data-value="year">Año</div>
+			</div>
+		</div>
+		<div class="works-container__works js-works">
+			<!-- ********************************************************************
+				$ WORKS
+			********************************************************************* -->
+			<section class="works" data-columns>
+				{% for work in works %}
+					<a href="#" class="work">
+						<img src="{{work.photo}}">
+					</a>
+				{% endfor %}
+			<!-- 
+				<a href="#" class="work">
+					<img src="/img/works/obra1.jpg">
+				</a>
+				<a href="#" class="work">
+					<img src="/img/works/obra2.jpg">
+				</a>
+				<a href="#" class="work">
+					<img src="/img/works/obra3.jpg">
+				</a>
+				<a href="#" class="work">
+					<img src="/img/works/obra4.jpg">
+				</a>
+				<a href="#" class="work">
+					<img src="/img/works/obra5.jpg">
+				</a>
+				<a href="#" class="work">
+					<img src="/img/works/obra6.jpg">
+				</a>
+				<a href="#" class="work">
+					<img src="/img/works/obra7.jpg">
+				</a>
+				<a href="#" class="work">
+					<img src="/img/works/obra8.jpg">
+				</a>
+				<a href="#" class="work">
+					<img src="/img/works/obra9.jpg">
+				</a>
+				<a href="#" class="work">
+					<img src="/img/works/obra10.jpg">
+				</a>
+				<a href="#" class="work">
+					<img src="/img/works/obra11.jpg">
+				</a>
+				<a href="#" class="work">
+					<img src="/img/works/obra12.jpg">
+				</a>
+			 -->
+			</section>
+		</div>
+	</div>
+
+
+	<!-- ********************************************************************
+		$ MORE
+	********************************************************************* -->
+	<div class="more">
+		<button class="button-solid js-moreButton" data-size='small' data-color='red'>Ver más</button>
+	</div>
+
+
+	<!-- ********************************************************************
+		$ SLOGAN
+	********************************************************************* -->
+	<section class="slogan">
+		<span class="slogan-text">Muestra tu talento artístico!</span>
+		<button class="button-solid js-signUpButton" data-size='large'>Sign Up</button>
+		<!-- <button class="button-solid js-signUpButton" data-size='large'>Regístrate</button> -->
+	</section>
+
+
+	<!-- ********************************************************************
+		$ FOOTER
+	********************************************************************* -->
+	<div class="footer-container">
+		<footer class="footer">
+			<div class="footer__logo">
+				<a class="logo" href="#">
+					<img class="logo__small" src="/img/logo-small-white.png">
+					<img class="logo__normal" src="/img/logo-white.png">
+				</a>
+			</div>
+			<div class="footer__sections">
+				<div class="footer__section copyright">
+					<p class="skinny-text" data-size='small' data-color='light'>COPYRIGHT © 2015 - ALL RIGHTS RESERVED.</p>
+				</div>
+				<div class="footer__section links">
+					<p class="medium-text">Blog</p>
+					<p class="medium-text">Terminos</p>
+					<p class="medium-text">Condiciones</p>
+				</div>
+				<div class="footer__section social">
+					<i class="fa fa-facebook"></i>
+					<i class="fa fa-twitter"></i>
+					<i class="fa fa-google-plus"></i>
+				</div>			
+			</div>
+		</footer>
+	</div>
+
+
+	<!-- ********************************************************************
+		$ LOGIN
+	********************************************************************* -->
+	<section class="login-modal">
+		<div class="login-box js-loginBox">
+			<header class="login-box__header">			
+				<div class="skinny-menu">
+					<a href="#" class="skinny-menu__item js-signInFormButton">
+						Ingresar
+					</a>
+					<a href="#" class="skinny-menu__item js-signUpFormButton">
+						Registrarme
+					</a>
+				</div>
+			</header>
+			<form class="login-box__form js-signUpForm">
+		 		<a href="#" class="facebook-button" data-expand='true'>
+					<i class="fa fa-facebook-official"></i>&nbsp; Registrarme con Facebook
+				</a>
+				<div class="separator-text">
+					<span class="line"></span>
+					<span class="text">Con email</span>
+					<span class="line"></span>
+				</div>
+				<input class="input" data-size='large' name="username" placeholder="Username" type="text">
+				<input class="input" data-size='large' name="email" placeholder="Email" type="email">
+				<input class="input" data-size='large' name="password" placeholder="Password" type="password">
+				<input class="input" data-size='large' name="first-name" placeholder="First Name" type="text">
+				<input class="input" data-size='large' name="last-name" placeholder="Last Name" type="text">
+				<select class="input" name="gender">
+					<option selected disabled>Género</option>
+					<option value="Male">Masculino</option>
+					<option value="Female">Femenino</option>
+				</select>
+				<div class="question">
+					<input name="question" type="checkbox" id="question">
+					<label for="question" class="medium-text">¿Eres Artista profesional?</label>
+				</div>
+				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Registrarme" type="submit">
+				<p class="high-text note" data-size="small">Al registrarte estas aceptando los <strong>terminos y condiciones</strong> de Arte Manifiesto</p>
+			</form>
+			<form class="login-box__form js-signInForm">
+		 		<a href="#" class="facebook-button" data-expand='true'>
+					<i class="fa fa-facebook-official"></i>&nbsp; Ingresar con Facebook
+				</a>
+				<div class="separator-text">
+					<span class="line"></span>
+					<span class="text">Con email</span>
+					<span class="line"></span>
+				</div>
+				<input class="input" data-size='large' name="email" placeholder="Email" type="text">
+				<input class="input" data-size='large' name="password" placeholder="Password" type="password">
+				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Ingresar" type="submit">
+				<p class="high-text note js-rememberFormButton" data-size="small">Recordar contraseña</p>
+			</form>
+			<form class="login-box__form js-rememberForm">
+				<div class="separator-text">
+					<span class="line"></span>
+					<span class="text">Recordar contraseña</span>
+					<span class="line"></span>
+				</div>
+				<input class="input" data-size='large' name="email" placeholder="Email" type="text">
+				<input class="button-solid" data-size='large' data-color='red' data-expand='true' value="Recordar" type="submit">
+				<p class="high-text note js-rememberBackButton" data-size="small">Ingresar</p>
+			</form>
+			<div class="login-box__closed js-loginClosed"><i class="fa fa-times"></i></div>
+		</div>
+	</section>
+
+
+	<script type="text/template" id="work-template">
+		<a href="#" class="work">
+			<img src="<%= photo %>">
+		</a>
+	</script>
+
+	<script>
+
+		pagination = {{ pagination|json|safe }};
+		console.log('pagination: ', pagination)
+
+		var user = {{ user|json|safe }};
+		console.log('user: ', user)
+
+		// var works = {{ works|json|safe }};
+		// // console.log('works: ', works)
+
+		// var categories = {{ categories|json|safe }};
+		// // console.log('categories: ', categories)
+
+		var url = {{ url|json|safe }};
+		console.log('url: ', url)
+
+	</script>
+
+	<script src="/js/vendor/jquery.min.js"></script>
+	<script src="/js/vendor/salvattore.js"></script>
+	<script src="/js/vendor/underscore-min.js"></script>
+
+	<script src="/js/lib/login.js"></script>
+	<script src="/js/lib/filters.js"></script>
+	<script src="/js/discover-works.js"></script>
+
+
+</body>
+</html>
+
+	<!-- <script type="text/template" id="work-template">
+		// <a href="#" class="work">
+		// 	<img src="<%= photo %>">
+		// </a>
+	</script>
+
+	<script>
+
+		// window.pagination = {{ pagination|json|safe }};
+		// // console.log('pagination: ', pagination)
+
+		// var user = {{ user|json|safe }};
+		// // console.log('user: ', user)
+
+		// var works = {{ works|json|safe }};
+		// // console.log('works: ', works)
+
+		// var categories = {{ categories|json|safe }};
+		// // console.log('categories: ', categories)
+
+		// window.url = {{ url|json|safe }};
+		// // console.log('url: ', url)
+
+	</script> -->
+
+	<!-- // <script src="/js/discover-works.js"></script> -->
+
+<!-- 	// <script src="/js/vendor/salvattore.js"></script>
+	// <script src="/js/vendor/jquery.min.js"></script>
+	// <script src="/js/vendor/underscore-min.js"></script>
+
+	// <script src="/js/lib/filters.js"></script>
+ -->
+
+<!-- <div class="categorie js-category" data-value="holi!">Dibujo</div>
+<div class="categorie js-category" data-value="holi!">Ilustración</div>
+<div class="categorie js-category" data-value="holi!">Pintura</div>
+<div class="categorie js-category selected" data-value="holi!">Arte</div>
+<div class="categorie js-category" data-value="holi!">Fotografía</div>
+<div class="categorie js-category" data-value="holi!">Escultura</div>
+<div class="categorie js-category" data-value="holi!">Instalación</div>
+<div class="categorie js-category" data-value="holi!">Técnica Mixta</div>
+<div class="categorie js-category" data-value="holi!">Grabado</div> -->
+
+	<!-- {% include "../partial/header.html"%} -->
+
+<!-- 	{% if !user %}
 		<section class="slogan">
 			<span class="slogan-text">Descubre Geniales Diseños en Increibles Productos</span>
 			<button class="button-solid js-signUpButton" data-size='large'>Sign Up</button>
 		</section>
-	{% endif %}
+	{% endif %} -->
 
-	<section class="filters-menu">
+
+	<!-- <section class="category-menu">
+		<div class="thick-menu">
+			<a href="#" class="thick-menu__item">Descubrir Artistas</a>
+			<a href="#" class="thick-menu__item">Descubrir Obras</a>
+		</div>
+	</section> -->
+
+
+		<!-- <section class="filters-menu">
 		<div class="filters-menu__search">
 			<div class="search">
 				<input type="text" placeholder="Busca Obras, Artistas y Productos">
@@ -49,9 +388,9 @@
 		<div class="filters-menu__order js-rightFiltersButton">
 			<button class="button-filter">Ordenar &nbsp <i class="fa fa-caret-right"></i></button>
 		</div>
-	</section>
+	</section> -->
 
-	<section class="works-container">
+	<!-- <section class="works-container">
 		<div class="works-container__left-filters js-leftFilters">
 			<div class="filters">
 				<div class="filters__title">
@@ -89,50 +428,4 @@
 				<div class="filter js-time" data-value="year">Año</div>
 			</div>
 		</div>
-	</section>
-
-	<script type="text/template" id="work-template">
-		<a href="#" class="work">
-			<img src="<%= photo %>">
-		</a>
-	</script>
-
-	<script src="/js/vendor/salvattore.js"></script>
-	<script src="/js/vendor/jquery.min.js"></script>
-	<script src="/js/vendor/underscore-min.js"></script>
-
-	<script src="/js/lib/filters.js"></script>
-
-	<script>
-
-		window.pagination = {{ pagination|json|safe }};
-		// console.log('pagination: ', pagination)
-
-		var user = {{ user|json|safe }};
-		// console.log('user: ', user)
-
-		var works = {{ works|json|safe }};
-		// console.log('works: ', works)
-
-		var categories = {{ categories|json|safe }};
-		// console.log('categories: ', categories)
-
-		window.url = {{ url|json|safe }};
-		// console.log('url: ', url)
-
-	</script>
-
-	<script src="/js/discover-works.js"></script>
-
-</body>
-</html>
-
-<!-- <div class="categorie js-category" data-value="holi!">Dibujo</div>
-<div class="categorie js-category" data-value="holi!">Ilustración</div>
-<div class="categorie js-category" data-value="holi!">Pintura</div>
-<div class="categorie js-category selected" data-value="holi!">Arte</div>
-<div class="categorie js-category" data-value="holi!">Fotografía</div>
-<div class="categorie js-category" data-value="holi!">Escultura</div>
-<div class="categorie js-category" data-value="holi!">Instalación</div>
-<div class="categorie js-category" data-value="holi!">Técnica Mixta</div>
-<div class="categorie js-category" data-value="holi!">Grabado</div> -->
+	</section> -->
