--- a/public/css/discover-artists.css
+++ b/public/css/discover-artists.css
@@ -292,26 +292,6 @@ html {
     margin: auto;
   }
 }
-.filters {
-  margin: 1rem 0.5rem;
-  border: solid 1px #ddd;
-  font-family: 'Raleway';
-  font-size: 0.8rem;
-  min-width: 9.25rem;
-  overflow: hidden;
-}
-.filters__title {
-  padding: 0.5rem 1rem;
-  font-weight: 600;
-  border-bottom: solid 1px #ddd;
-}
-.filters .filter {
-  padding: 0.5rem 1rem;
-  cursor: pointer;
-}
-.filters .filter.selected {
-  background: rgba(0,0,0,0.1);
-}
 /*------------------------------------*
 	$ INPUTS
 *------------------------------------*/
@@ -329,6 +309,29 @@ html {
 }
 .input[data-size='large'] {
   font-size: 1.15rem;
+}
+.search {
+  position: relative;
+}
+.search input {
+  width: 100%;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  padding: 0.5em 0 0.5em 2em;
+  color: #555;
+  font-size: 1rem;
+}
+.search i {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+  -moz-transform: translate(0, -50%);
+  -o-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  left: 0.75em;
+  color: #808080;
 }
 /*------------------------------------*
 	$ BUTTONS
@@ -386,6 +389,12 @@ html {
   letter-spacing: 1px;
   text-transform: uppercase;
   font-family: 'Roboto Condensed';
+}
+.button-filter {
+  padding: 0.5em 0.75rem;
+  font-family: 'Raleway';
+  border: 1px solid #ddd;
+  cursor: pointer;
 }
 /*------------------------------------*
 	$ ARTISTS
