--- a/public/css/index.css
+++ b/public/css/index.css
@@ -156,6 +156,12 @@ html {
   text-transform: uppercase;
   font-family: 'Roboto Condensed';
 }
+.button-filter {
+  padding: 0.5em 0.75rem;
+  font-family: 'Raleway';
+  border: 1px solid #ddd;
+  cursor: pointer;
+}
 .separator-text {
   text-transform: uppercase;
   color: #aaa;
@@ -245,6 +251,29 @@ html {
 }
 .input[data-size='large'] {
   font-size: 1.15rem;
+}
+.search {
+  position: relative;
+}
+.search input {
+  width: 100%;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  padding: 0.5em 0 0.5em 2em;
+  color: #555;
+  font-size: 1rem;
+}
+.search i {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+  -moz-transform: translate(0, -50%);
+  -o-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  left: 0.75em;
+  color: #808080;
 }
 .logo {
   padding: 0.5rem 1rem;
@@ -453,6 +482,7 @@ html {
   padding: 0 1rem;
 }
 .works {
+  min-height: 700px;
   padding: 0 0.5rem;
   overflow: hidden;
   max-width: 1100px;
