--- a/public/css/style-guide.css
+++ b/public/css/style-guide.css
@@ -265,6 +265,12 @@ html {
   text-transform: uppercase;
   font-family: 'Roboto Condensed';
 }
+.button-filter {
+  padding: 0.5em 0.75rem;
+  font-family: 'Raleway';
+  border: 1px solid #ddd;
+  cursor: pointer;
+}
 /*------------------------------------*
 	$ INPUTS
 *------------------------------------*/
@@ -282,6 +288,29 @@ html {
 }
 .input[data-size='large'] {
   font-size: 1.15rem;
+}
+.search {
+  position: relative;
+}
+.search input {
+  width: 100%;
+  -webkit-border-radius: 4px;
+  border-radius: 4px;
+  border: 1px solid #ccc;
+  padding: 0.5em 0 0.5em 2em;
+  color: #555;
+  font-size: 1rem;
+}
+.search i {
+  position: absolute;
+  top: 50%;
+  -webkit-transform: translate(0, -50%);
+  -moz-transform: translate(0, -50%);
+  -o-transform: translate(0, -50%);
+  -ms-transform: translate(0, -50%);
+  transform: translate(0, -50%);
+  left: 0.75em;
+  color: #808080;
 }
 /*------------------------------------*
 	$ WORKS
