--- a/public/stylus/discover-works.styl
+++ b/public/stylus/discover-works.styl
@@ -1,86 +1,108 @@
-/*------------------------------------*
-	$ NIB
-*------------------------------------*/
-@import 'nib'
+// /*------------------------------------*
+// 	$ NIB
+// *------------------------------------*/
+// @import 'nib'
 
-/*------------------------------------*
-	$ BASE
-*------------------------------------*/
-@import 'base.styl'
+// /*------------------------------------*
+// 	$ BASE
+// *------------------------------------*/
+// @import 'base.styl'
 
-/*------------------------------------*
-	$ LOGOS
-*------------------------------------*/
-@import 'elements/logos.styl'
+// /*------------------------------------*
+// 	$ LOGOS
+// *------------------------------------*/
+// @import 'elements/logos.styl'
 
-/*------------------------------------*
-	$ MENUS
-*------------------------------------*/
-@import 'elements/menus.styl'
+// /*------------------------------------*
+// 	$ MENUS
+// *------------------------------------*/
+// @import 'elements/menus.styl'
 
-/*------------------------------------*
-	$ TEXTS
-*------------------------------------*/
-@import 'elements/texts.styl'
+// /*------------------------------------*
+// 	$ TEXTS
+// *------------------------------------*/
+// @import 'elements/texts.styl'
 
-/*------------------------------------*
-	$ FILTERS
-*------------------------------------*/
-@import 'elements/filters.styl'
+// /*------------------------------------*
+// 	$ FILTERS
+// *------------------------------------*/
+// @import 'elements/filters.styl'
 
-/*------------------------------------*
-	$ INPUTS
-*------------------------------------*/
-@import 'elements/inputs.styl'
+// /*------------------------------------*
+// 	$ INPUTS
+// *------------------------------------*/
+// @import 'elements/inputs.styl'
 
-/*------------------------------------*
-	$ WORKS
-*------------------------------------*/
-@import 'elements/works.styl'
+// ------------------------------------*
+// 	$ WORKS
+// *------------------------------------
+// @import 'elements/works.styl'
 
-/*------------------------------------*
-	$ BUTTONS
-*------------------------------------*/
-@import 'elements/buttons.styl'
+// /*------------------------------------*
+// 	$ BUTTONS
+// *------------------------------------*/
+// @import 'elements/buttons.styl'
 
-/*------------------------------------*
-	$ ARTISTS
-*------------------------------------*/
-// @import 'elements/artists.styl'
+// /*------------------------------------*
+// 	$ ARTISTS
+// *------------------------------------*/
+// // @import 'elements/artists.styl'
 
-.slogan
-	padding 1rem
-	text-align center
-	max-width max-width
-	margin auto
-	.button-solid
-		margin .5rem
-
-// .works
+// .slogan
+// 	padding 1rem
+// 	text-align center
 // 	max-width max-width
 // 	margin auto
-	
-.works-container
-	display flex
-	max-width max-width
-	margin auto
-	padding 0 .5rem
-	&__works
-		flex 1
-	&__left-filters
-	&__right-filters
-		// width 50px
-		width 0
-		// width auto
-		// display flex
-		overflow hidden
-		transition width .5s
-	&__left-filters.visible
-	&__right-filters.visible
-		width auto
-		// width 150px
+// 	.button-solid
+// 		margin .5rem
 
-.more-works
-	max-width max-width
-	margin auto
-	text-align center
+// // .works
+// // 	max-width max-width
+// // 	margin auto
+	
+// .works-container
+// 	display flex
+// 	max-width max-width
+// 	margin auto
+// 	padding 0 .5rem
+// 	&__works
+// 		flex 1
+// 	&__left-filters
+// 	&__right-filters
+// 		// width 50px
+// 		width 0
+// 		// width auto
+// 		// display flex
+// 		overflow hidden
+// 		transition width .5s
+// 	&__left-filters.visible
+// 	&__right-filters.visible
+// 		width auto
+// 		// width 150px
+
+// .more-works
+// 	max-width max-width
+// 	margin auto
+// 	text-align center
+
+
+
+/*------------------------------------------------------------------------------------------------------------*
+	$ DEPURADO---------------------------------------------------------------------------------------------------
+*------------------------------------------------------------------------------------------------------------*/
+@import 'nib'
+@import 'base.styl'
+
+@import 'elements/menus.styl'
+@import 'elements/buttons.styl'
+@import 'elements/logos.styl'
+@import 'elements/texts.styl'
+@import 'elements/inputs.styl'
+
+@import 'objects/slogan.styl'
+@import 'objects/header.styl'
+@import 'objects/login.styl'
+@import 'objects/footer.styl'
+@import 'objects/works.styl'
+@import 'objects/more.styl'
+@import 'objects/filters.styl'
