--- a/public/stylus/elements/inputs.styl
+++ b/public/stylus/elements/inputs.styl
@@ -59,3 +59,25 @@
 		box-shadow 0 0 8px rgba(82,168,236,0.6)
 	&[data-size='large']
 		font-size 1.15rem
+
+
+/*------------------------------------*
+	$ SEARCH
+*------------------------------------*/
+.search
+	position relative
+	input
+		width 100%
+		border-radius 4px
+		border 1px solid #cccccc
+		// padding .75em 0 .75em 2em
+		padding .5em 0 .5em 2em
+		color #555
+		font-size 1rem
+		// font-size .95rem
+	i
+		position absolute
+		top 50%
+		transform translate(0, -50%)
+		left .75em
+		color gray
